--- a/views/angularEjsDemo/index.ejs
+++ b/views/angularEjsDemo/index.ejs
@@ -75,6 +75,9 @@
                 </div>
             </div>
         </div>
+        <!--<script src="/javascripts/3rd-lib/seajs/2.3.0/sea.js" type="text/javascript"></script>-->
+        <!--<script src="/javascripts/angularEjsDemo/index-manage.js" type="text/javascript"></script>-->
+
         <script src="/javascripts/3rd-lib/jquery/1.11.2/jquery.js" type="text/javascript"></script>
         <script src="/javascripts/3rd-lib/angular-js/1.2.5/angular.js" type="text/javascript"></script>
         <script src="/javascripts/3rd-lib/angular-js/1.2.5/angular-route.js" type="text/javascript"></script>
