--- a/views/angularEjsDemo/index.ejs
+++ b/views/angularEjsDemo/index.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="sampleApp">
     <head>
-        <link href="/stylesheets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="/stylesheets/css/bootstrap/2.0.0/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="/stylesheets/css/ng-grid/ng-grid.css" rel="stylesheet" type="text/css"/>
         <link href="/stylesheets/css/style.css" rel="stylesheet" type="text/css"/>
     </head>
