--- a/public/stylesheets/less/testDemo/login.less
+++ b/public/stylesheets/less/testDemo/login.less
@@ -1,14 +1,28 @@
 
-.hide{display: none;}
+
 .login{
-  background:#333;
-  .log{display: block;width:247px;padding:15px;margin:60px auto 0px;text-align: center;}
+  background:#444;
+  .log{
+    display: block;
+    width:247px;
+    padding:15px;
+    margin:60px auto 0px;
+    text-align: center;
+  }
   .content{
-    display: block;width:291px;padding:20px 30px 0px;margin:0 auto;background: #fff;
+    display: block;
+    width:291px;
+    padding:20px 30px 15px;
+    margin:0 auto;
+    background: #fff;
+    box-sizing: content-box;
     .form-title{
       font-weight: 300;
       text-align: center;
       margin-bottom: 30px;
+    }
+    .form-group{
+      margin:0px;
     }
     .control{
       position: relative;
@@ -32,10 +46,126 @@
         width:100%;
         line-height:30px;
         padding: 2.5px 5px 2.5px 30px;
-        border:1px solid #CCCCCC;
-        border-left:2px solid green;
+        border:1px solid rgb(229, 229, 229);
+        border-left:2px solid #35aa47;
         box-sizing: border-box;
+        border-radius: 0px;
+        &:focus{
+          border:1px solid rgb(229, 229, 229);
+          border-left:2px solid #35aa47;
+          box-shadow: none;
+        }
+      }
+    }
+
+  }
+}
+
+
+.form-button{
+  background-color: #fff;
+  clear: both;
+  border: 0px;
+  border-bottom: 1px solid #eee;
+  padding: 0px 30px 25px 30px;
+  margin-left: -30px;
+  margin-right: -30px;
+  .checkbox{
+    display: inline-block;
+    margin:8px 0px 5px;
+    padding:0px;
+    .check{
+      display: block;
+      width:100%;
+      font-weight: normal;
+      .checkinputbox{
+        position: relative;
+        top: 2px;
+        float:left;
+        display: block;
+        width:15px;
+        height: 15px;
+        margin-right:5px;
+        border:1px solid #BDB8B8;
+        input{
+          display: block;
+          margin:0px;
+          width:15px;
+          height: 15px;
+          line-height: 15px;
+          margin:0px;
+        }
+        label{
+          position:absolute;
+          left:0px;
+          top:0px;
+          width:15px;
+          min-height: 15px;
+          line-height: 15px;
+          margin:0px;
+          padding:0px;
+          cursor: pointer;
+          &:before{
+            content:"";
+            position:absolute;
+            top:3px;
+            left:2px;
+            width: 9px;
+            height: 5px;
+            border: 1px solid #BDB8B8;
+            border-top: none;
+            border-right: none;
+            -webkit-transform:rotate(-45deg);
+            opacity: 0;
+          }
+        }
+        &.checked label:before{
+          opacity: 1;
+        }
       }
     }
   }
+}
+
+.form-box{
+  display: block;
+  width:100%;
+  overflow: hidden;
+  a{
+    line-height: 30px;
+    color:#333;
+  }
+}
+
+
+@media only screen and(min-width: 1024px){
+
+}
+
+@media only screen and(max-width: 1024px) and (min-width:620px){
+
+}
+
+
+@media only screen and(max-width: 620px) and (min-width:320px){
+  .login{
+    .content{
+      width:222px;
+      padding:30px;
+    }
+  }
+}
+
+@media only screen and(max-width: 320px){
+  .login{
+    .log{
+      margin-top:20px;
+    }
+    .content{
+      width:222px;
+      padding:30px;
+    }
+  }
+
+
 }
