添加index页面,学习依赖注入，路由

--- a/views/angularDemo/index.html
+++ b/views/angularDemo/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="sampleApp">
     <head>
-        <link href="../../public/stylesheets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="../../public/stylesheets/css/bootstrap/2.0.0/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="../../public/stylesheets/css/ng-grid/ng-grid.css" rel="stylesheet" type="text/css"/>
         <link href="../../public/stylesheets/css/style.css" rel="stylesheet" type="text/css"/>
     </head>
@@ -75,12 +75,12 @@
                 </div>
             </div>
         </div>
-        <script src="../../public/javascripts/3rd-lib/jquery/1.11.2/jquery.js" type="text/javascript"></script>
+        <script src="../../public/javascripts/3rd-lib/jquery/dist/jquery.js" type="text/javascript"></script>
         <script src="../../public/javascripts/3rd-lib/angular-js/1.2.5/angular.js" type="text/javascript"></script>
         <script src="../../public/javascripts/3rd-lib/angular-js/1.2.5/angular-route.js" type="text/javascript"></script>
         <script src="../../public/javascripts/3rd-lib/angular-js/1.2.5/angular-resource.js" type="text/javascript"></script>
         <script src="../../public/javascripts/3rd-lib/angular-js/1.2.5/angular-mocks.js" type="text/javascript"></script>
-        <script src="../../public/javascripts/3rd-lib/ng-grid/2.0.1/ng-grid.js" type="text/javascript"></script>
+        <script src="../../public/javascripts/3rd-lib/ng-grid/ng-grid-2.0.14.min.js" type="text/javascript"></script>
         <script src="../../public/javascripts/angularDemo/app.js" type="text/javascript"></script>
         <script src="../../public/javascripts/angularDemo/service.js" type="text/javascript"></script>
         <script src="../../public/javascripts/angularDemo/controllers.js" type="text/javascript"></script>
