--- a/views/template/testDemo/common/footer.html
+++ b/views/template/testDemo/common/footer.html
@@ -2,4 +2,9 @@
     <div class="footer-inner">
         2015@zhou tingZhu
     </div>
+    <div class="footer-tools">
+        <span class="go-top">
+            <i class="icon-angle-up"></i>
+        </span>
+    </div>
 </div>
