--- a/views/template/testDemo/common/header.html
+++ b/views/template/testDemo/common/header.html
@@ -11,7 +11,7 @@
         <ul class="nav pull-right">
             <li class="dropdown" id="header-notification-bar">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <i class="glyphicon-warning-sign"></i>
+                    <i class="icon-warning"></i>
                     <span class="badge">9</span>
                 </a>
                 <ul class="dropdown-menu extended notification">
@@ -22,7 +22,7 @@
             </li>
             <li class="dropdown" id="header-inbox-bar">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <i class="glyphicon-envelope"></i>
+                    <i class="icon-envelop"></i>
                     <span class="badge">5</span>
                 </a>
                 <ul class="dropdown-menu">
