--- a/views/template/testDemo/common/header.html
+++ b/views/template/testDemo/common/header.html
@@ -1,36 +1,37 @@
 <div class="header navbar nav-fixed-top">
-    <div class="container">
-        <!--logo-->
-        <a class="navbar-brand" href="index.html"></a>
-        <!--logo end-->
-        <!--导航-->
-        <a class="btn-group collapsing" data-toggle="collapse" data-target=".nav-collapse">
-        </a>
-        <!--导航end-->
-        <!---->
-        <ul class="nav pull-right">
-            <li class="dropdown" id="header-notification-bar">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <i class="icon-warning"></i>
-                    <span class="badge">9</span>
-                </a>
-                <ul class="dropdown-menu extended notification">
-                    <li>
-                        <p>你有14个新消息</p>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown" id="header-inbox-bar">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <i class="icon-envelop"></i>
-                    <span class="badge">5</span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <p>你有12个新的消息</p>
-                    </li>
-                    <li>
-                        <a href="#">
+    <div class="navbar-inner">
+        <div class="container-fluid">
+            <!--logo-->
+            <a class="navbar-brand" href="index.html"></a>
+            <!--logo end-->
+            <!--导航-->
+            <a class="btn-group collapsing" data-toggle="collapse" data-target=".nav-collapse">
+            </a>
+            <!--导航end-->
+            <!---->
+            <ul class="nav pull-right">
+                <li class="dropdown" id="header-notification-bar">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="icon-warning"></i>
+                        <span class="badge">9</span>
+                    </a>
+                    <ul class="dropdown-menu extended notification">
+                        <li>
+                            <p>你有14个新消息</p>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dropdown" id="header-inbox-bar">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="icon-envelop"></i>
+                        <span class="badge">5</span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <p>你有12个新的消息</p>
+                        </li>
+                        <li>
+                            <a href="#">
                             <span class="photo">
                                 <img src="../../../public/images/avatar2.jpg">
                             </span>
@@ -41,22 +42,23 @@
                             <span class="message">
                                 Vivamus sed auctor nibh congue nibh.auctor nibh . Vivamus sed auctor nibh congue nibh.auctor nibh .
                             </span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 
-                </a>
-                <ul class="dropdown-menu">
-                    <li>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
 
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown"></li>
-            <li class="dropdown"></li>
-        </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dropdown"></li>
+                <li class="dropdown"></li>
+            </ul>
+        </div>
     </div>
 </div>
