头部导航样式

--- a/public/stylesheets/less/common/header.less
+++ b/public/stylesheets/less/common/header.less
@@ -26,19 +26,21 @@
       float:left;
       padding:0px 15px;
       .dropdown-toggle{
+        position: relative;
         padding:15px 10px 7px 10px;
         margin:0px;
         i{
-          position: relative;
           font-size: 18px;
           color:#8a8a8a;
         }
         .badge{
           position: absolute;
-          top: 0px;
-          right: 0px;
+          top: 8px;
+          right:19px;
+          padding:3px 6px;
+          text-align: center;
           background: #ff0000;
-          border-radius: 50%;
+          border-radius: 50% !important;
 
         }
       }
