头部导航样式

--- a/public/stylesheets/less/common/common.less
+++ b/public/stylesheets/less/common/common.less
@@ -35,6 +35,11 @@ body{
   color: #b94a48;
 }
 
+//成功按钮 绿色
+.label-green{
+  background: #3cc051;
+
+}
 
 /*********input默认样式************/
 input[type=checkbox]{
