--- a/views/template/testDemo/index.html
+++ b/views/template/testDemo/index.html
@@ -39,7 +39,7 @@
     //    seajs.use('../../../public/javascripts/3rd-lib/angular-js/1.2.5/angular-resource');
     //    seajs.use('../../../public/javascripts/3rd-lib/angular-js/1.2.5/angular-mocks');
     //    seajs.use('../../../public/javascripts/3rd-lib/ng-grid/ng-grid-2.0.14.min');
-    //    seajs.use('../../../public/javascripts/testDemo/index-manage');
+        seajs.use('../../../public/javascripts/testDemo/index-manage');
     //    seajs.use('../../../public/javascripts/testDemo/index-route');
 </script>
 <script src="../../../public/javascripts/3rd-lib/jquery/dist/jquery.js" type="text/javascript"></script>
