--- a/views/template/testDemo/common/header.html
+++ b/views/template/testDemo/common/header.html
@@ -5,7 +5,8 @@
             <a class="brand" href="index.html"><img src="../../../public/images/logo.png" alt="logo"></a>
             <!--logo end-->
             <!--导航-->
-            <a class="btn-group collapsing" data-toggle="collapse" data-target=".nav-collapse">
+            <a class="btn-navbar collapsing pull-right" data-toggle="collapse" data-target=".nav-collapse">
+                <img src="../../../public/images/menu-toggler.png" alt="">
             </a>
             <!--导航end-->
             <!---->
