--- a/public/stylesheets/less/common/common.less
+++ b/public/stylesheets/less/common/common.less
@@ -3,8 +3,13 @@ body{
   background-color: #3d3d3d !important;
 }
 
+.page-container{display: block;width:100%;margin-top:42px;;}
+.page-content{margin-left: 225px;}
+
 .hide{display: none;}
 .pull-right{float:right;}
+
+ul{list-style-type: none;}
 
 .close{
   display: inline-block;
