--- a/views/template/testDemo/common/left-nav.html
+++ b/views/template/testDemo/common/left-nav.html
@@ -1,7 +1,7 @@
-<div class="page-sidebar nav-collapse collapse">
+
     <ul class="page-sidebar-menu">
         <li>
-            <div class="sidebar-toggler hidden-phone"></div>
+            <div class="sidebar-toggler hidden-phone pull-right"></div>
         </li>
         <li>
             <form class="sidebar-search">
@@ -55,4 +55,3 @@
             </a>
         </li>
     </ul>
-</div>
