--- a/views/template/testDemo/index.html
+++ b/views/template/testDemo/index.html
@@ -22,12 +22,11 @@
 <!--内容-->
 <div class="page-container">
     <!--左边导航-->
-    <div ng-include="'common/left-nav.html'"></div>
+    <div class="page-sidebar nav-collapse collapse" ng-include="'common/left-nav.html'"></div>
     <!--左边导航end-->
 
     <!--主内容-->
     <div class="page-content">
-
     </div>
     <!--主内容end-->
 </div>
