--- a/public/stylesheets/less/common/header.less
+++ b/public/stylesheets/less/common/header.less
@@ -41,7 +41,7 @@
       padding:0px 15px;
       .dropdown-toggle{
         position: relative;
-        padding:15px 10px 7px 10px;
+        padding: 14px 10px 6px 10px
         margin:0px;
         img{
           display: inline;
