--- a/public/stylesheets/less/common/common.less
+++ b/public/stylesheets/less/common/common.less
@@ -46,7 +46,14 @@ ul{list-style-type: none;}
 
 }
 
+a:hover{
+  text-decoration: none;
+}
+
 /*********input默认样式************/
 input[type=checkbox]{
   visibility: hidden;
+}
+input:focus{
+  outline: none;
 }
