--- a/views/template/testDemo/common/left-nav.html
+++ b/views/template/testDemo/common/left-nav.html
@@ -1,57 +1,56 @@
-
-    <ul class="page-sidebar-menu">
-        <li>
-            <div class="sidebar-toggler hidden-phone pull-right"></div>
-        </li>
-        <li>
-            <form class="sidebar-search">
-                <div class="input-box">
-                    <a href="javascript:void(0);" class="remove"></a>
-                    <input type="text" placeholder="查询...">
-                    <input type="search" class="searche">
-                </div>
-            </form>
-        </li>
-        <li class="start active">
-            <a href="index.html">
-                <i class="icon-home"></i>
-                <span class="title">Dashboard</span>
-                <span class="selected"></span>
-            </a>
-        </li>
-        <li class="start">
-            <a href="index.html">
-                <i class="icon-home"></i>
-                <span class="title">Dashboard</span>
-                <span class="selected"></span>
-            </a>
-        </li>
-        <li class="start">
-            <a href="index.html">
-                <i class="icon-home"></i>
-                <span class="title">Dashboard</span>
-                <span class="selected"></span>
-            </a>
-        </li>
-        <li class="start">
-            <a href="index.html">
-                <i class="icon-home"></i>
-                <span class="title">Dashboard</span>
-                <span class="selected"></span>
-            </a>
-        </li>
-        <li class="start">
-            <a href="index.html">
-                <i class="icon-home"></i>
-                <span class="title">Dashboard</span>
-                <span class="selected"></span>
-            </a>
-        </li>
-        <li class="start">
-            <a href="index.html">
-                <i class="icon-home"></i>
-                <span class="title">Dashboard</span>
-                <span class="selected"></span>
-            </a>
-        </li>
-    </ul>
+<ul class="page-sidebar-menu">
+    <li>
+        <div class="sidebar-toggler hidden-phone"></div>
+    </li>
+    <li>
+        <form class="sidebar-search">
+            <div class="input-box">
+                <a href="javascript:void(0);" class="remove"></a>
+                <input type="text" placeholder="查询...">
+                <input type="search" class="search">
+            </div>
+        </form>
+    </li>
+    <li class="start active">
+        <a href="index.html">
+            <i class="icon-home"></i>
+            <span class="title">Dashboard</span>
+            <span class="selected"></span>
+        </a>
+    </li>
+    <li class="start">
+        <a href="index.html">
+            <i class="icon-home"></i>
+            <span class="title">Dashboard</span>
+            <span class="selected"></span>
+        </a>
+    </li>
+    <li class="start">
+        <a href="index.html">
+            <i class="icon-home"></i>
+            <span class="title">Dashboard</span>
+            <span class="selected"></span>
+        </a>
+    </li>
+    <li class="start">
+        <a href="index.html">
+            <i class="icon-home"></i>
+            <span class="title">Dashboard</span>
+            <span class="selected"></span>
+        </a>
+    </li>
+    <li class="start">
+        <a href="index.html">
+            <i class="icon-home"></i>
+            <span class="title">Dashboard</span>
+            <span class="selected"></span>
+        </a>
+    </li>
+    <li class="start">
+        <a href="index.html">
+            <i class="icon-home"></i>
+            <span class="title">Dashboard</span>
+            <span class="selected"></span>
+        </a>
+    </li>
+</ul>
