--- a/public/stylesheets/less/common/left-nav.less
+++ b/public/stylesheets/less/common/left-nav.less
@@ -1,55 +1,90 @@
-.page-sidebar {
+.page-sidebar{
+  position:absolute;
   display: block;
   width:225px;
-  background: #3D3D3D;
 }
 
 .page-sidebar-menu{
   display: block;
-  padding:0px;
+  width: 100%;
+  margin:0px;
+  padding: 0px;
   li{
     display: block;
-    width: 100%;
     line-height: 20px;
-    text-align: center;
-    color: #fff;
-    border-top:1px solid rgb(92, 92, 92);
-    box-sizing: border-box;
     .sidebar-toggler{
-      display: block;
-      width:29px;
+      width: 29px;
       height: 29px;
-      margin-top: 15px;
-      margin-left: 175px;
-      background-image: url(../../../images/sidebar-toggler.jpg);
+      margin:15px 17px 0px auto;
+      background-image: url(../../../public/images/sidebar-toggler.jpg);
       background-color: #242424;
-      cursor: pointer;
-      opacity: 0.5;
     }
-    .sidebar-search{
-      margin:8px 20px 20px;
-      .input-box{
-        display: block;
-        input{
-          line-height: 20px;
+    a{
+      position: relative;
+      display: block;
+      padding: 10px 15px;
+      color:#fff;
+      font-size: 14px;
+      font-weight: 300;
+      border-top:1px solid #5c5c5c;
+    }
+
+    &.start{
+      a:before{
+        position:absolute;
+        top:15px;
+        right:15px;
+        width:10px;
+        height:10px;
+        border-top:1px solid  #fff;
+        border-left:1px solid  #fff;
+        border-right:1px solid  transparent;
+        content:'';
+        -webkit-transform:rotate(-45deg);
+      }
+      &.active{
+        a{
           border: none;
-          border-bottom: 1px solid #fff;
-          background-color: #3d3d3d !important;
-          color: #bfbfbf !important;
-        }
-        .submit{
-          float:right;
-          display: block;
-          width: 13px;
-          height: 13px;
-          border: none;
+          background: #e02222 !important;
+          &:before{
+            position:absolute;
+            top:15px;
+            right:-7px;
+            border-top:13px solid  #fff;
+            border-left:13px solid  transparent;
+            border-right:13px solid  transparent;
+            content:'';
+            -webkit-transform:rotate(90deg);
+            //          background: #fff;
+          }
         }
       }
     }
-    a{
-      display: inline-block;
-      padding: 10px 15px;
-    }
+  }
+}
 
+.sidebar-search{
+  margin:8px 20px 20px;
+  .input-box{
+    display: block;
+    width: 100%;
+    border-bottom:1px solid #7d7d7d;
+    a{
+      padding:0px;
+      border: none;
+    }
+    input{
+      padding-top:4px;
+      border:none;
+      color:#dfdfdf;
+      background-color: #3d3d3d;
+    }
+    .search{
+      float:right;
+      display: block;
+      width: 13px;
+      height: 13px;
+      background-image: url(../../../public/images/search-icon.png);
+    }
   }
 }
