--- a/public/stylesheets/less/index.less
+++ b/public/stylesheets/less/index.less
@@ -1,4 +1,53 @@
 .page-container{
+  position: relative;
   display: block;
   width: 100%;
+  margin-top:42px;
+}
+
+.page-content{
+  margin-left:225px;
+  min-height: 760px;
+  background: #fff;
+}
+
+.modal{
+  position: fixed;
+  top: 10%;
+  left: 50%;
+}
+
+.container-fluid{
+  padding-left:20px;
+}
+.row{
+  margin:0px;
+}
+.span12{
+  margin:0px;
+}
+.page-title{
+  display: block;
+  line-height: 40px;
+  margin:20px 0px 15px 0px;
+  color:#666;
+  font-size:27px;
+  font-weight: 300;
+  small{
+    font-size: 14px;
+    color:#888;
+  }
+}
+.breadcrumb{
+  i {
+    display: inline-block;
+    width: 1.25em;
+    text-align: center;
+    font-size: 14px;
+    color: #666;
+  }
+  a{
+    font-size: 14px;
+    color: #333;
+  }
 }
