--- a/views/template/testDemo/index.html
+++ b/views/template/testDemo/index.html
@@ -27,6 +27,16 @@
 
     <!--主内容-->
     <div class="page-content">
+        <div class="modal hide">
+            <div class="modal-header">
+                <button data-dismiss="modal" class="close" type="button"></button>
+                <h3>Widget Settings</h3>
+            </div>
+            <div class="modal-body">
+                Widget settings form goes here
+            </div>
+        </div>
+        <div class="container-fluid" ng-include="'dashboard.html'"></div>
     </div>
     <!--主内容end-->
 </div>
