--- a/views/angularEjsDemo/index.ejs
+++ b/views/angularEjsDemo/index.ejs
@@ -78,12 +78,12 @@
         <!--<script src="/javascripts/3rd-lib/seajs/2.3.0/sea.js" type="text/javascript"></script>-->
         <!--<script src="/javascripts/angularEjsDemo/index-manage.js" type="text/javascript"></script>-->
 
-        <script src="/javascripts/3rd-lib/jquery/1.11.2/jquery.js" type="text/javascript"></script>
+        <script src="/javascripts/3rd-lib/jquery/dist/jquery.js" type="text/javascript"></script>
         <script src="/javascripts/3rd-lib/angular-js/1.2.5/angular.js" type="text/javascript"></script>
         <script src="/javascripts/3rd-lib/angular-js/1.2.5/angular-route.js" type="text/javascript"></script>
         <script src="/javascripts/3rd-lib/angular-js/1.2.5/angular-resource.js" type="text/javascript"></script>
         <script src="/javascripts/3rd-lib/angular-js/1.2.5/angular-mocks.js" type="text/javascript"></script>
-        <script src="/javascripts/3rd-lib/ng-grid/2.0.1/ng-grid.js" type="text/javascript"></script>
+        <script src="/javascripts/3rd-lib/ng-grid/2.0.14/ng-grid.js" type="text/javascript"></script>
         <script src="/javascripts/angularEjsDemo/app.js" type="text/javascript"></script>
         <script src="/javascripts/angularEjsDemo/service.js" type="text/javascript"></script>
         <script src="/javascripts/angularEjsDemo/controllers.js" type="text/javascript"></script>
