--- a/views/template/testDemo/index.html
+++ b/views/template/testDemo/index.html
@@ -2,6 +2,7 @@
 <html ng-app="indexApp">
 <head lang="en">
     <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>首页</title>
     <link rel="stylesheet" type="text/css" href="../../../public/stylesheets/css/font-awesome/font-awesome.css">
